# bertopic-project

./: .gitignore  DEPLOYMENT.md  README.md  app.py  config.yaml  demo.py  export_visualizations.py  main.py  pipeline_config.py  pyproject.toml  test_agreement.py  test_inference.py
artifacts/: topic_centroids.npy  topic_lookup.csv
artifacts/model/: topic_embeddings.safetensors  topics.json
docs/: architecture.dot  architecture.mmd
notebooks/: 00_preprocessing.ipynb  01_Generate_Embedding.ipynb  02_embedding_test.ipynb  03_umap.ipynb  05_clustering_hdbscan.ipynb  06_final_bertopic.ipynb  07_topic_classification.ipynb
outputs/: run_metadata.json
scripts/: compare_inference_methods.py  run_validation_checks.py  validate_inference.py
src/: config.py  validators.py
src/clustering/: cluster.py  reduce.py
src/embedding/: evaluate.py  generate.py
src/inference/: predict.py  schemas.py
src/preprocessing/: clean.py  preprocess.py
src/topic_modeling/: fit.py  label.py  visualize.py
src/validation/: validate.py
tests/: test_artifacts.py
