[project]
name = "bertopic-project"
version = "0.1.0"
description = "BERTopic-based topic modeling pipeline for CFPB consumer complaint data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.16.0",
    "google-genai>=1.0.0",
    "hdbscan>=0.8.29",
    "lingua-language-detector>=2.0.0",
    "matplotlib>=3.7.0",
    "nbformat>=5.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "sentence-transformers>=2.2.0",
    "tqdm>=4.65.0",
    "umap-learn>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
bertopic-pipeline = "main:main"
